--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,8 @@
             tools:ignore="ExportedReceiver">
             <intent-filter>
                 <action android:name="com.zebra.mxadbfiletransfer.FILE_MOVE_ACTION" />
+                <action android:name="com.zebra.mxadbfiletransfer.FILE_DELETE_ACTION" />
+
                 <action android:name="com.zebra.mxadbfiletransfer.TERMINATE_ACTION" />
 
                 <category android:name="android.intent.category.DEFAULT" />
